--- a/e-commerce-app/index.html
+++ b/e-commerce-app/index.html
@@ -7,14 +7,14 @@
     <title>e-commerce-app</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-gray-200 p-4">
     <div class="container mx-auto flex flex-col lg:flex-row">
         <div class="lg:w-3/4">
             <h1 class="text-3xl font-semibold mb-4">Simple E-commerce</h1>
-            <!-- <div id="category-filters" class="flex mb-4">
-               // Filters will go here 
-            </div> -->
-            <!-- <button id="clear-filters-btn" class="bg-gray-400 hover:bg-gray-500">Clear Filters</button> -->
+            <div id="category-filters" class="flex mb-4">
+                <!-- Filters will go here -->
+            </div>
             <div id="product-list" class="grid grid-cols-3 gap-4">
                 <!-- Product items will go here -->
             </div>
@@ -23,12 +23,13 @@
             <div id="cart" class="mb-8">
                 <h2 class="text-xl font-semibold mb-2">Cart</h2>
                 <ul id="cart-items">
-                
+                    <!-- Cart items will go here -->
                 </ul>
-                <button id="checkout-btn" class="bg-green-300 rounded text-white-xl">Checkout</button>
+                <button id="checkout-btn" class="bg-green-300 rounded text-white px-4 py-2">Checkout</button>
             </div>
         </div>
     </div>
     <script src="scripts/app.js"></script>
 </body>
+
 </html>
